# kafka-ping

./: Cargo.toml  build.rs
protos/: payload.proto
src/: main.rs
src/protos/: payload.rs
